--- a/data/counselors.yml
+++ b/data/counselors.yml
@@ -18,3 +18,54 @@
   detail: 我愿意和你一起面对所有，相信爱具有疗愈一切的力量
   url: https://www.xinli001.com/expert/1001379733
   avatar: https://ossimg.xinli001.com/20171230/02349cc681fcb707fdcc877cd89c184b.png
+
+- name: 陈欣
+  tags: []
+  brief: 北京会明心理成长咨询中心主任
+  detail: 心理咨询是摒弃对自我内心的漠视，调养关爱自己的内在，爱是一切的答案。
+  url: https://www.xinli001.com/expert/1000531442
+  avatar: https://ossimg.xinli001.com/20170901/45408b30c2df3c51ff6f39df9a87bc3c.png
+
+- name: 李乾
+  tags: []
+  brief: 二级心理咨询师、中美高级精神分析班学员
+  detail: 改变在接纳自己的缺点中进行……
+  url: https://www.xinli001.com/expert/1000848068
+  avatar: https://ossimg.xinli001.com/20191220/9c56377e50b4b80fc8701688c22dcc48.jpg
+
+
+- name: 吴立敏
+  tags: []
+  brief: 央视《极速少年》心理专家 
+  detail: 生活无论怎样，请不要忘记微笑，愿您成为自己的太阳，无需凭借谁的光芒！
+  url: https://www.xinli001.com/expert/271537603
+  avatar: https://ossimg.xinli001.com/20191218/1b354f20ab636441d0efb47cf5635399.jpg
+  
+  
+- name: 石欣 
+  tags: []
+  brief: 精神动力学取向咨询师 心理专栏作者 
+  detail: 你的生命故事，我们细细品读。
+  url: https://www.xinli001.com/expert/25189089
+  avatar: https://ossimg.xinli001.com/20190904/93abb1169ae4d90f965abf3f7212f7b1.jpg
+  
+- name: 陈媛媛
+  tags: []
+  brief: 国家二级心理咨询师；中美精神分析联盟成员
+  detail: 每个人成长的道路上都不是容易的，而正是因为这份不易，才更需要我们去好好关照自己！
+  url: https://www.xinli001.com/expert/93925502
+  avatar: https://ossimg.xinli001.com/20161019/7991668faf3f5a61a82b89564d94abac.png
+
+- name: 张雯萍
+  tags: []
+  brief: 心理学硕士，美国心理学会会员 
+  detail: 每个人都有机会成为内心有力量,外在有能力，既能独处，也能享受关系的人。
+  url: https://www.xinli001.com/expert/59109407
+  avatar: https://ossimg.xinli001.com/20181105/ee42f741f1baab0d5df422f4a6cbc1dc.jpg
+
+- name: 蔡艺云
+  tags: []
+  brief: 催眠师，心理咨询师，晨梦心灵家园创始人，
+  detail: 每个人都是自己最好的内在疗愈师，我愿陪你一起找到属于你自己的内在疗愈师。
+  url: https://www.xinli001.com/expert/723060
+  avatar: https://ossimg.xinli001.com/20160126/7a90af917346c874e33eb98eee89451b.png
