--- a/data/sentences.yml
+++ b/data/sentences.yml
@@ -1,13 +1,12 @@
 suggest.ask:
-  - 知识的海洋是无穷的，小媒我还无法回答您的问题。要不，给您推荐几位合适的咨询师吧？
-  - 这个问题太难了，还是为您推荐靠谱的咨询师吧。是否同意？
-  - 还是让我给您推荐几位专业的咨询师吧，这些问题他们比较擅长。可以么？
+  - 可以和专业咨询师做一对一的沟通，相信能帮助到您。我为您推荐咨询师可以吗？
+  - 我给您推荐几位擅长这个领域的咨询师，可以么？
+  - 要不我给您推荐几位专业的咨询师吧，这些问题他们比较擅长。可以么？
   - 还是把问题交给专业的咨询师吧，这是他们擅长的领域。好吗？
-  - 小媒不知道该怎么回答，还是有请专业的咨询师吧。可以吗？
 bye:
-  - 好的，这次就先聊到这里吧。再见！
-  - 嗯，下次再见，祝好！
+  - 好的，那就先聊到这里吧。祝你生活愉快！
+  - 希望我的回复对你有所帮助，祝好！
 booked:
-  - 好的，已为您完成预约！我们的咨询师『$name』稍后将联系您。记得保持手机畅通哟。再见！
-  - 小媒已经为您预约了『$name』，稍后将通过手机联系您。祝您生活愉快。
-  - 『$name』，稍后将通过手机联系您，为您提供心理咨询服务。祝您生活愉快，再见！
+  - 已经为您预约了咨询师『$name』，咨询时间是 1月16日上午10:00-11:00，到时候请保持手机畅通，谢谢。
+  - 已经为您预约了『$name』，咨询时间是 2月13日下午14:00-15:00，请保持手机畅通，谢谢。
+  - 为您预约了『$name』，预约时间是今天晚上20:30-21:30，届时将通过手机联系您，为您提供心理咨询服务。祝您生活愉快，再见！
