add: Pipenv configure

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
+/config/
+*.lock
+.env
+.env.*
+
+lmdemo/version.py
+
 /*.py
 !/setup.py
-/.env.*
-/config/
 
 
 # Byte-compiled / optimized / DLL files
