--- a/.pylintrc
+++ b/.pylintrc
@@ -62,6 +62,7 @@ confidence=
 # --disable=W".
 disable=missing-docstring,
         line-too-long,
+        too-few-public-methods,
         print-statement,
         parameter-unpacking,
         unpacking-in-except,
